-
Bug
-
Resolution: Fixed
-
P3
-
7, 8, 9, 10, 11
-
b20
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206844 | 12 | Shashidhara Veerabhadraiah | P3 | Resolved | Fixed | team |
| JDK-8206621 | 11.0.1 | Shashidhara Veerabhadraiah | P3 | Resolved | Fixed | b01 |
| JDK-8225656 | openjdk8u232 | Zhengyu Gu | P3 | Resolved | Fixed | b01 |
| JDK-8226298 | openjdk8u222 | Unassigned | P3 | Resolved | Fixed | b07 |
| JDK-8222175 | 8u231 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8223082 | 8u221 | Alexey Ivanov | P3 | Resolved | Fixed | b03 |
| JDK-8222854 | 8u212 | Alexey Ivanov | P3 | Closed | Fixed | b32 |
| JDK-8229594 | emb-8u231 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8224437 | emb-8u221 | Alexey Ivanov | P3 | Resolved | Fixed | b03 |
| JDK-8225749 | 7u241 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
The problem lies on the usage of a windows library call that only captures changes on local printers. A alternate solution would be to react on registry printer changes as described here;
https://blogs.msdn.microsoft.com/hmahrt/2012/04/09/how-to-listen-for-printer-connections/
- backported by
-
JDK-8206621 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8206844 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8222175 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8223082 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8224437 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8225656 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8225749 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8226298 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8229594 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8222854 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Closed
-
- duplicates
-
JDK-6730467 PrinterService for network printer via UNC name
-
- Closed
-
- relates to
-
JDK-8229869 Printer listings take a long time to refresh on CUPS
-
- Open
-
-
JDK-8212202 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8221263 [TEST_BUG] RemotePrinterStatusRefresh test is hard to use
-
- Resolved
-
-
JDK-8221412 lookupPrintServices() does not always update the list of Windows remote printers
-
- Resolved
-
-
JDK-8222108 Reduce minRefreshTime for updating remote printer list on Windows
-
- Resolved
-
-
JDK-4744405 RFE: lookupPrintServices() to refresh the printers list dynamically
-
- Resolved
-
-
JDK-8263311 Watch registry changes for remote printers update instead of polling
-
- Resolved
-
-
JDK-8300014 Some backports placed the tests in the wrong location
-
- Resolved
-