8153732: Windows remote printer changes do not reflect in lookupPrintServices()

Reviewed-by: prr, psadhukhan